--- a/package.json
+++ b/package.json
@@ -16,17 +16,26 @@
     "@emotion/styled": "^11.11.0",
     "@webcontainer/api": "^1.1.8",
     "chatgpt-helper": "^0.2.1",
+    "fenceparser": "^2.2.0",
     "framer-motion": "^10.16.16",
+    "immer": "^10.0.3",
+    "lodash.omit": "^4.5.0",
+    "markdown-to-jsx": "^7.4.0",
+    "marked": "^11.1.1",
     "openai": "^4.22.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.21.0",
+    "react-syntax-highlighter": "^15.5.0",
     "zod": "^3.22.4",
     "zod-to-json-schema": "^3.22.3"
   },
   "devDependencies": {
+    "@types/lodash.omit": "^4.5.9",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/react-syntax-highlighter": "^15.5.11",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
