--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "fenceparser": "^2.2.0",
     "framer-motion": "^10.16.16",
     "immer": "^10.0.3",
+    "jsstore": "^4.7.2",
     "lodash.omit": "^4.5.0",
     "markdown-to-jsx": "^7.4.0",
     "marked": "^11.1.1",
+    "mdast-util-from-markdown": "^2.0.0",
+    "mdast-util-to-markdown": "^2.1.0",
     "openai": "^4.22.1",
+    "path-normalize": "^6.0.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
