--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.11.0",
     "@webcontainer/api": "^1.1.8",
     "chatgpt-helper": "^0.2.1",
+    "dexie": "^3.2.7",
     "fenceparser": "^2.2.0",
     "framer-motion": "^10.16.16",
     "immer": "^10.0.3",
