--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "fenceparser": "^2.2.0",
     "framer-motion": "^10.16.16",
     "immer": "^10.0.3",
-    "jsstore": "^4.7.2",
+    "javascript-time-ago": "^2.5.9",
     "lodash.omit": "^4.5.0",
     "markdown-to-jsx": "^7.4.0",
     "marked": "^11.1.1",
     "mdast-util-from-markdown": "^2.0.0",
     "mdast-util-to-markdown": "^2.1.0",
+    "nanoid": "^5.0.6",
     "openai": "^4.22.1",
     "path-normalize": "^6.0.13",
     "react": "^18.2.0",
@@ -33,6 +34,7 @@
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.21.0",
     "react-syntax-highlighter": "^15.5.0",
+    "use-debounce": "^10.0.0",
     "zod": "^3.22.4",
     "zod-to-json-schema": "^3.22.3"
   },
